MOBILE-4842 mathjax: Fix some formulas cropped in iOS
In iOS, the mjx-assistive-mml was not visibile but, after scrolling, for some reason the parts of formulas that were underneath mjx-assistive-mml disappeared, as if the element was visible.

--- a/src/theme/components/format-text.scss
+++ b/src/theme/components/format-text.scss
@@ -114,6 +114,9 @@ core-format-text {
             pointer-events: none;
         }
 
+        mjx-assistive-mml {
+            @include sr-only();
+        }
     }
 
 }
